# offnariscv

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
ext/: CMakeLists.txt
ext/riscv-isa-sim/: CMakeLists.txt
ext/riscv-tests/: CMakeLists.txt
rtl/: main.v
src/: ace_if.sv  dec_imm.sv  dec_inst.sv  defs.sv  defs.v  funct3s.v  lsu.sv  offnariscv_core.sv  offnariscv_pkg.sv  ofnrv32_id.sv  opcodes.v  riscv_pkg.sv
src/arbiter/: core_arbiter.sv
src/cache/: cache_directory.sv  cache_if.sv  cache_memory.sv  cache_pkg.sv  cache_si.sv  cache_si_ro.sv
src/committer/: committer.sv
src/common/: axis_if.sv  axis_skid_buffer.sv  axis_slice.sv  axis_sync_fifo.sv  ram_async.sv  ram_sync.sv
src/csr/: csr.sv  csr_if.sv
src/decoder/: decoder.sv
src/execute/: alu.sv  bru.sv  dispatcher.sv  system.sv
src/ifu/: ifu.sv
src/lsu/: lsu.sv
src/pcgen/: pcgen.sv
src/regfile/: regfile.sv
test/: CMakeLists.txt  Dut.hpp  SimSpike.cpp  SimSpike.hpp  main.cpp  offnariscv_core_test.cpp  offnariscv_core_wrap.sv
test/cache/: CMakeLists.txt  cache_si_test.cpp  cache_si_wrap.sv  cache_test.cpp  cache_wrap.sv
test/common/: CMakeLists.txt  axis_skid_buffer_test.cpp  axis_skid_buffer_wrap.sv  axis_slice_test.cpp  axis_slice_wrap.sv  axis_sync_fifo_test.cpp  axis_sync_fifo_wrap.sv  ram_sync_test.cpp  ram_sync_wrap.sv
test/decoder/: CMakeLists.txt
test/ifu/: CMakeLists.txt  ifu_test.cpp  ifu_wrap.sv
test/lsu/: CMakeLists.txt  lsu_test.cpp  lsu_wrap.sv
test/pcgen/: CMakeLists.txt  pcgen_test.cpp  pcgen_wrap.sv
